# 26s_programing_enshuu

./: 2026p_full_memo.md  2026p_interface_memo.md  AGENTS.md  inspect_interface_chapter.py  outline.csv  pe_notebook_template.ipynb  pyproject.toml  プログラミング演習.code-workspace
notebooks/: week1-08252018.ipynb  week2-08252018.ipynb  week3-08252018.ipynb  week4-08252018.ipynb  week5-08252018.ipynb  week6-08252018.ipynb  week7-08252018.ipynb  week8-08252018.ipynb  week9-08252018.ipynb
outputs/ch01/: answer.py
outputs/ch02/: answer.py
outputs/ch03/: answer.py
outputs/ch04/: answer.py
outputs/ch05/: answer.py
outputs/ch06/: answer.py
outputs/ch07/: answer.py
outputs/ch08/: answer.py
outputs/ch09/: answer.py  sample_postal.json
structured_md/: README.md  agent_index.md  index.md  page_map.csv
structured_md/chapters/: appendix_13_開発ツール.md  appendix_14_最終課題_潜水艦ゲーム.md  (+13 more)
submarine/: README.md  SUBMARINE_GAME.md  __init__.py  __main__.py  board.py  cli.py  game.py  main.py  player.py  ship.py  smoke_test.py
submarine-py/: .gitignore  README.md  pyproject.toml
submarine-py/sample/: dqn_player.py  manual_player.py  random_player.py  train_dqn.py
submarine-py/src/submarine_py/: field.py  player_base.py  server.py  ship.py
submarine-py/src/submarine_py/rl/: __init__.py  action_space.py  agent.py  belief.py  config.py  environment.py  network.py  replay_buffer.py  reward.py  state_encoder.py  trainer.py
submarine-py/tests/rl/: test_action_space.py  test_belief.py  test_network.py  test_replay_buffer.py  test_reward.py  test_state_encoder.py  test_training.py
(+9 files in other folders)
