[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "submarine-py"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  {name = "T. Kaneko", email="kaneko@graco.c.u-tokyo.ac.jp"},
]

dependencies = [
    'numpy',
    'tabulate',
    'torch',
    'tqdm',
    'pytest',
]

[tool.setuptools.packages.find]
where = ["src"]
